--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
-  "main": "./src/index.js",
+  "main": "dist/base.js",
+  "jsnext:main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Goldinteractive/js-base.git"
   },
   "author": "Manuel Sommerhalder",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack --mode=build",
+    "dev": "webpack --progress --colors --watch --mode=dev",
+    "test": "eslint src"
+  },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.13.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "yargs": "^6.6.0"
   },
   "dependencies": {
     "easing-js": "danro/easing-js",
     "riot-observable": "^3.0.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Goldinteractive/js-base/issues"
+  },
+  "homepage": "https://github.com/Goldinteractive/js-base"
 }
