--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
   "main": "dist/base.js",
   "jsnext:main": "src/index.js",
@@ -16,16 +16,16 @@
     "test": "eslint src"
   },
   "devDependencies": {
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.13.1"
-  },
-  "dependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
-    "easing-js": "danro/easing-js",
-    "riot-observable": "^3.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.18.0",
+    "eslint": "^3.13.1",
     "webpack": "beta"
+  },
+  "dependencies": {
+    "easing-js": "danro/easing-js",
+    "riot-observable": "^3.0.0"
   },
   "bugs": {
     "url": "https://github.com/Goldinteractive/js-base/issues"
