--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
-  "main": "dist/base.js",
+  "main": "lib/base.js",
   "jsnext:main": "src/index.js",
   "repository": {
     "type": "git",
