--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.16",
+  "version": "0.0.18",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
   "main": "lib/base.js",
   "jsnext:main": "src/index.js",
@@ -22,10 +22,12 @@
     "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.18.6",
     "eslint": "^3.13.1",
-    "webpack": "beta"
+    "webpack": "^2.2.1"
   },
   "dependencies": {
+    "camel-case": "^3.0.0",
     "easing-js": "danro/easing-js",
+    "metalsmith-navigation": "^0.2.9",
     "riot-observable": "^3.0.0"
   },
   "browserslist": [
