--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.23",
+  "version": "0.0.25",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
   "main": "lib/base.js",
   "jsnext:main": "src/index.js",
@@ -29,7 +29,9 @@
     "core-js": "^2.4.1",
     "easing-js": "danro/easing-js",
     "metalsmith-navigation": "^0.2.9",
-    "riot-observable": "^3.0.0"
+    "promise-polyfill": "^6.0.2",
+    "riot-observable": "^3.0.0",
+    "whatwg-fetch": "^2.0.2"
   },
   "browserslist": [
     "> 5%",
