--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.26",
+  "version": "0.0.35",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
   "main": "lib/base.js",
   "jsnext:main": "src/index.js",
@@ -28,6 +28,7 @@
     "camel-case": "^3.0.0",
     "core-js": "^2.4.1",
     "easing-js": "danro/easing-js",
+    "fetch-jsonp": "^1.0.6",
     "promise-polyfill": "^6.0.2",
     "riot-observable": "^3.0.0",
     "whatwg-fetch": "^2.0.2",
