--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.50",
+  "version": "0.0.51",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
   "main": "lib/base.js",
   "jsnext:main": "src/index.js",
@@ -33,8 +33,7 @@
     "promise-polyfill": "^6.0.2",
     "qs": "^6.4.0",
     "riot-observable": "^3.0.0",
-    "whatwg-fetch": "^2.0.2",
-    "when-dom-ready": "^1.2.6"
+    "whatwg-fetch": "^2.0.2"
   },
   "browserslist": [
     "> 5%",
