--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gi-js-base",
-  "version": "0.0.55",
+  "version": "0.0.57",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
   "main": "lib/base.js",
   "jsnext:main": "src/index.js",
@@ -26,18 +26,19 @@
   },
   "dependencies": {
     "camel-case": "^3.0.0",
-    "core-js": "^2.4.1",
-    "detect-it": "^3.0.0",
+    "core-js": "^2.5.1",
+    "detect-it": "^3.0.3",
     "easing-js": "danro/easing-js",
-    "fetch-jsonp": "^1.0.6",
+    "fetch-jsonp": "^1.1.3",
     "promise-polyfill": "^6.0.2",
-    "qs": "^6.4.0",
+    "qs": "^6.5.1",
     "riot-observable": "^3.0.0",
-    "whatwg-fetch": "^2.0.2"
+    "whatwg-fetch": "^2.0.3"
   },
   "browserslist": [
     "> 5%",
-    "last 2 version"
+    "last 2 version",
+    "ie 10-11"
   ],
   "bugs": {
     "url": "https://github.com/Goldinteractive/js-base/issues"
