--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.18.6",
     "eslint": "^3.13.1",
+    "jsdoc": "^3.5.5",
     "webpack": "^3.0.0"
   },
   "dependencies": {
