--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browser-sync": "^2.18.6",
     "eslint": "^3.13.1",
     "jsdoc": "^3.5.5",
+    "prettier": "1.13.7",
     "webpack": "^3.0.0"
   },
   "dependencies": {
