--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "detect-it": "^3.0.3",
     "easing-js": "danro/easing-js",
     "fetch-jsonp": "^1.1.3",
+    "intersection-observer": "^0.5.0",
     "promise-polyfill": "^6.0.2",
     "qs": "^6.5.1",
     "riot-observable": "^3.0.0",
