--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-  plugins: ['transform-es2015-modules-umd'],
-  presets: [
-    ['es2015', { modules: false }]
+  "presets": [["@babel/preset-env", { "modules": false }]],
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", { "decoratorsBeforeExport": true }],
+    "@babel/plugin-proposal-class-properties"
   ]
 }
