Add sideEffects configuration
Can be used by consumers to properly add code splitting functionality

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "lib/base.js",
   "jsnext:main": "src/index.js",
   "module": "src/index.js",
+  "sideEffects": [
+    "./src/init-dom.js",
+    "./src/polyfills/*.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Goldinteractive/js-base.git"
