--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@goldinteractive/js-base",
-  "version": "0.0.8-alpha.2",
+  "version": "0.0.8-alpha.5",
   "description": "Basic javascript foundation written in ES6/2015 Vanilla JS.",
   "main": "lib/base.js",
   "jsnext:main": "src/index.js",
@@ -21,18 +21,20 @@
     "test": "make test"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-es2015-modules-umd": "^6.22.0",
-    "babel-preset-es2015": "^6.18.0",
-    "browser-sync": "^2.18.6",
-    "eslint": "^3.13.1",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "better-docs": "^1.1.4",
+    "eslint": "^5.13.0",
     "jsdoc": "^3.5.5",
     "prettier": "1.13.7",
-    "webpack": "^3.0.0"
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "camel-case": "^3.0.0",
     "core-js": "^2.5.1",
     "detect-it": "^3.0.3",
     "easing-js": "danro/easing-js",
