--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "make build",
     "dev": "make dev",
-    "test": "make test"
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -26,9 +26,12 @@
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "better-docs": "^1.1.4",
     "eslint": "^5.13.0",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
     "jsdoc": "^3.5.5",
     "prettier": "1.13.7",
     "webpack": "^4.29.3",
