--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "src/index.js",
   "sideEffects": [
     "./src/init-dom.js",
+    "./src/utils/url.js",
     "./src/polyfills/*.js"
   ],
   "repository": {
