--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "module": "src/index.js",
   "sideEffects": [
     "./src/init-dom.js",
-    "./src/utils/url.js",
-    "./src/polyfills/*.js"
+    "./src/utils/url.js"
   ],
   "repository": {
     "type": "git",
@@ -41,20 +40,16 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
     "easing-js": "danro/easing-js",
     "fetch-jsonp": "^1.1.3",
-    "intersection-observer": "^0.5.0",
-    "promise-polyfill": "^6.0.2",
     "qs": "^6.5.1",
     "riot-observable": "^3.0.0",
     "tiny-invariant": "^1.0.6",
-    "whatwg-fetch": "^2.0.3"
   },
   "browserslist": [
     "> 5%",
     "last 2 versions",
-    "ie 11"
+    "not IE 11"
   ],
   "bugs": {
     "url": "https://github.com/Goldinteractive/js-base/issues"
